# docker-test

./: .dockerignore  .env  Cargo.toml  README.md
.docker/: Dockerfile
.github/workflows/: docker-publish.yml
src/: main.rs
